--- a/mixins/centred-icon-block.less
+++ b/mixins/centred-icon-block.less
@@ -1,6 +1,6 @@
-.centred-icon-block {
+.centred-icon-block(@width: 20px, @height: @width) {
     .sizing();
-    .size(42px);
+    .size(@width, @height);
     text-align: center;
     cursor: pointer;
     display: inline-block;
